--- a/users/templates/users/users_cart.html
+++ b/users/templates/users/users_cart.html
@@ -12,9 +12,11 @@
                     {% include "carts/includes/included_cart.html" %}
                     <!-- End of cart markup -->
                 </div>
-                <a class="btn btn-dark" href="../orders/create_order.html">
-                    Proceed to Checkout
-                </a>
+                {% if carts %}
+                    <a class="btn btn-dark" href="../orders/create_order.html">
+                        Proceed to Checkout
+                    </a>
+                {% endif %}
             </div>
         </div>
     </div>
