add-to-cart ajax request and json response

--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -15,7 +15,10 @@
                         <h2 class="card-title">{{ product.name }}</h2>
                         <p class="card-text"><strong>Price:</strong> {{ product.price }} $</p>
                         <p class="card-text">{{ product.description }}</p>
-                        <a href="{% url 'carts:cart_add' product.slug %}" class="btn btn-dark add-to-cart">Add to Cart</a>
+                        <a href="{% url 'carts:cart_add' %}" class="btn btn-dark add-to-cart"
+                        data-product-id={{ product.id }}>
+                            {% csrf_token %}
+                            Add to Cart</a>
                     </div>
                 </div>
             </div>
