--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -69,7 +69,8 @@
         <div class="col-md-3 text-md-end">
             <button type="button" class="btn btn-outline-dark ms-auto" data-bs-toggle="modal" data-bs-target="#exampleModal" style="position: relative;">
                 <i class="bi-cart-fill" style="font-size: 1.25rem;"></i>
-                <span class="badge bg-dark ms-1 rounded-pill">{{ carts.total_quantity }}</span>
+                <span id="goods-in-cart-count" class="badge bg-dark ms-1 rounded-pill">{{ carts.total_quantity }}</span>
+
             </button>
         </div>
     </nav>
@@ -178,7 +179,13 @@
                 </div>
                 <!-- Product actions (e.g., Add to cart button) -->
                 <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url "carts:cart_add" product.slug %}">Add to cart</a></div>
+                    <div class="text-center">
+                        <a class="btn btn-outline-dark mt-auto add-to-cart"
+                           href="{% url 'carts:cart_add' %}" data-product-id={{ product.id }}>
+                            {% csrf_token %}
+                        Add to cart
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
