--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,8 @@
                     {% endif %}
                     <li class="nav-item">
                         <a href="{% url 'user:users_cart' %}" class="btn btn-outline-dark">
-                            <i class="bi-cart-fill me-1"></i>Cart <span class="badge bg-dark text-white ms-1 rounded-pill">{{ carts.total_quantity }}</span>
+                            <i class="bi-cart-fill me-1"></i>Cart <span class="badge bg-dark text-white ms-1 rounded-pill"></span>
+
                         </a>
                     </li>
 
@@ -114,7 +115,9 @@
     </footer>
 
     <!-- Scripts for Bootstrap and theme -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>-->
+    <script src="{% static "js/jquery/jquery-3.7.0.min.js" %}"></script>
+    <script src="{% static "js/jquery-ajax.js" %}"></script>
+    <script src="{% static "js/bootstrap/bootstrap.bundle.min.js" %}"></script>
 </body>
 </html>
