Created order template and form filled

--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -93,7 +93,7 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Continue Shopping</button>
                     {% if carts %}
-                    <a class="btn btn-primary" href="#">Checkout</a>
+                    <a class="btn btn-primary" href="{% url "orders:create_order" %}">Checkout</a>
                     {% endif %}
                 </div>
             </div>
