--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Continue Shopping</button>
-
+                    <a class="btn btn-primary" href="{% url "orders:create_order" %}">Checkout</a>
                 </div>
             </div>
         </div>
