Adding a description and content on a page for each page.

--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
 {% load carts_tags %}
+{% block title %}{{ context }}{% endblock %}
 
+{% block header %}
+    <!-- Header -->
+    <h1 class="display-4 fw-bolder">{{ content }}</h1>
+    <p class="lead fw-normal text-white-50 mb-0">{{ description }}</p>
+    <!-- Add more content as needed -->
+{% endblock %}
 {% block content %}
 <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
     <div class="container">
