--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}{{ context }}{% endblock %}
 
+{% block header %}
+    <!-- Header -->
+    <h1 class="display-4 fw-bolder">{{ content }}</h1>
+    <p class="lead fw-normal text-white-50 mb-0">{{ description }}</p>
+    <!-- Add more content as needed -->
+{% endblock %}
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
