--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -17,7 +17,7 @@
             <form action="{% url 'user:login' %}" method="post">
                 {% csrf_token %}
                 {% if request.GET.next %}
-                    <input type="text" name="next" value="{{request.GET.next}}">
+                    <input type="hidden" name="next" value="{{request.GET.next}}">
                 {% endif %}
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
